--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^8.0.3
   http: ^1.4.0
   carousel_slider: ^5.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
