--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   flutter_bloc: ^9.1.1
+  cloud_firestore: ^5.6.12
   bloc_concurrency: ^0.3.0
   stream_transform: ^2.1.1
   dartz: ^0.10.1
