--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^1.4.0
   carousel_slider: ^5.0.0
   json_annotation: ^4.9.0
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
