--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,32 +34,33 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.4.0
+  path_provider: ^2.1.5
+  connectivity_plus: ^6.1.5
+  get_it: ^8.0.3
+  injectable: ^2.5.1
+  carousel_slider: ^5.0.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
-  flutter_bloc: ^9.1.1
   cloud_firestore: ^5.6.12
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  dartz: ^0.10.1
   bloc_concurrency: ^0.3.0
   stream_transform: ^2.1.1
-  dartz: ^0.10.1
   equatable: ^2.0.7
-  get_it: ^8.0.3
-  http: ^1.4.0
-  carousel_slider: ^5.0.0
-  json_annotation: ^4.9.0
-  bloc: ^9.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
-  json_serializable: ^6.9.5
+  injectable_generator: ^2.7.0
+  hive_ce_generator: ^1.9.2
+  freezed: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
