--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   device_info_plus: ^11.5.0
   sentry_flutter: ^9.6.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   sentry_dart_plugin: ^3.1.1
